add launch screen with logo

--- a/HSBCCities/HSBCCities/Info.plist
+++ b/HSBCCities/HSBCCities/Info.plist
@@ -35,5 +35,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
+	<key>UILaunchImageFile</key>
+	<string>Launchscreen-logo</string>
 </dict>
 </plist>
